[tool.poetry]
name = "expsolver"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.14.1"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
sympy = "^1.13.3"
pyqt5 = "^5.15.11"
pyqt6 = "^6.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
